# Secure_Evidence

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/Secure_Evidence_backend/: Cargo.toml
src/Secure_Evidence_backend/src/: lib.rs
src/Secure_Evidence_frontend/: package.json
src/Secure_Evidence_frontend/src/: App.jsx
